[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "panCT"
version = "0.1.0"
description = "Tool for calculating genomic sequence complexity"
authors = [
    {name = "CAST Genomics"},
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23.0",
    "click>=8.0.3",
    "pysam>=0.22.1",
    "typer>=0.9.0",
]

[tool.poetry.dependencies]
numpy = [
    { version = "1.23.0" , markers = "python_version <= '3.10'" },
    { version = "2.2.2" , markers = "python_version > '3.10'" },
]
click = [
    { version = "8.0.3" , markers = "python_version <= '3.10'" },
    { version = "8.1.1" , markers = "python_version > '3.10'" },
]
pysam = [
    { version = "0.22.1" , markers = "python_version <= '3.10'" },
    { version = "0.23.0" , markers = "python_version > '3.10'" },
]
typer = [
    { version = "0.9.0" , markers = "python_version <= '3.10'" },
    { version = "0.15.1" , markers = "python_version > '3.10'" },
]

[tool.poetry.group.docs.dependencies]
Sphinx = ">=4.3.2"
sphinx-autodoc-typehints = ">=1.12.0"
sphinx-rtd-theme = ">=1.0.0"
numpydoc = ">=1.1.0"
sphinx-click = ">=3.0.2"

[project.urls]
repository = "https://github.com/CAST-genomics/panCT"
homepage = "https://github.com/CAST-genomics/panCT"
documentation = "https://panCT.readthedocs.io"
changelog = "https://github.com/CAST-genomics/panct/blob/main/CHANGELOG.md"

[project.scripts]
panct = "panct.__main__:app"

[tool.poetry]
requires-poetry = ">=2.0"

[tool.poetry.group.tests.dependencies]
pytest = ">=7.4.3"
pytest-cov = ">=3.0.0"
black = ">=23.3.0"
ipython = ">=7.34.0"
coverage = {extras = ["toml"], version = ">=7.2.7"}
filprofiler = ">=2023.3.1"

[tool.poetry.requires-plugins]
poetry-conda = ">=0.1.4"
poetry-plugin-export = ">=1.9"
poetry-plugin-shell = ">=1.0.1"

[tool.black]
line-length = 88
preview = true

[tool.pytest.ini_options]
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.pyright]
strictParameterNoneValue = false
ignore = ["**/tests/**"]
